fixed collapsing navbar instability

--- a/_assets/css/customCSS.css
+++ b/_assets/css/customCSS.css
@@ -55,5 +55,6 @@
     justify-content: center;
 }
 .signedin{
+    width: 279px;
     text-align: end;
 }
